     to recognize the difference between violations which require a Node, and
     those without.  This is to make certain that Rules which require and do not
     pass, will die with an error because they are buggy and need to be fixed.
   o Need to get licenses for Saxon and Rhino in place.  Organize all PMD licenses into a
     /license folder?

   DOCUMENTATION:
   o Expand documentation examples which demonstrate use of new RuleSetReferenceId
     capabilities, specifically interal RuleSet reference in a RuleSet XML, and use
     of a Rule reference in places not previously possible (e.g. CMD and Ant).
   o Fully document the changed/new command line and Ant configuration options.
   o Need to enhance documentation to cover Global and Language specific
     function namespaces required for XPath 2.0 use (e.g. pmd:matches
     and pmd-java:typeof).

---

This version of PMD breaks API compatibility with prior versions of PMD, as well
as RuleSet XML compatibility. Also the maven coordinates (groupId) have been changed.
The decision to break compatibility, allows PMD
internals and code organization to be improved to better handle additional
languages.  This opportunity was used to remove depreciated APIs, and beat up
any code which has thumbed its nose at the developers over the years. ;)

The following is relatively complete list of the major changes (this may not be
100% accurate, see actual source code when in doubt):

Fixed bug (no number) - Fixed UseStringBufferLengthRule only worked once per class
All StringBuffer-related rules now also catch StringBuilder-related issues in the same way

	API Change - Unification of treatment of languages within PMD core:
	   Added - net.sourceforge.pmd.lang.Language (now an 'enum')
	   Added - net.sourceforge.pmd.lang.LanguageVersion
	   Added - net.sourceforge.pmd.lang.LanguageVersionDiscoverer
	   Added - net.sourceforge.pmd.lang.LanguageVersionHandler
	   Added - net.sourceforge.pmd.lang.XPathHandler